--- a/paper.tex
+++ b/paper.tex
@@ -25,7 +25,7 @@
 	\maketitle
 	
 	\section{WDAqua in a Nutshell} \label{sec:intro}
-	WDAqua is a Marie Sk{\l}odowska Curie Innovative Training Network (ITN) running from January 2015 to December 2018, involves six academic partners\footnote{Fraunhofer Institute for Intelligent Analysis and Information Systems (IAIS), Germany; University of Bonn, Germany; National and Kapodistrian University of Athens, Greece; Universit{\'e} Jean Monnet Saint-{\'E}tienne, France; University of Southampton, UK; and the Open Data Institute (ODI), UK.}, and employs 15 PhD students in total.
+	WDAqua, a Marie Sk{\l}odowska Curie Innovative Training Network (ITN) running from January 2015 to December 2018, involves six academic partners\footnote{University of Bonn, Fraunhofer Institute for Intelligent Analysis and Information Systems IAIS, Germany; National and Kapodistrian University of Athens, Greece; Universit{\'e} Jean Monnet Saint-{\'E}tienne, France; University of Southampton, Open Data Institute (ODI), UK.}, and employs 15 PhD students in total.
         The main motivation of this project is that sharing, connecting, analyzing, and understanding data on the Web can provide better services to citizens, communities, and the industry.
         A vehicle to achieve this is data-driven question answering (QA).
         In data-driven QA, the key objective is to deliver precise and comprehensive answers to natural language questions primarily by making better use of data.
