minor corrections + some squeezing

--- a/paper.tex
+++ b/paper.tex
@@ -12,14 +12,16 @@
 % squeeze some space
 \setlength{\parskip}{0cm}
 \def\baselinestretch{0.99}
-\setlength{\belowcaptionskip}{-7mm}
+\setlength{\intextsep}{8pt}
+\setlength{\abovecaptionskip}{3pt}
+\setlength{\belowcaptionskip}{-10pt}
 
 \begin{document}
 	
 	\mainmatter
 	\title{WDAqua: Answering Questions using Web Data\thanks{The authors of this abstract are the coordinators of the project.}}
 	
-	\author{Ioanna Lytra, Maria-Esther Vidal, Christopher Lange \and S{\"o}ren Auer}
+	\author{Ioanna Lytra, Maria-Esther Vidal, Christoph Lange \and S{\"o}ren Auer}
 	\institute{University of Bonn, Germany\\ \mails\\}
 	
 	\maketitle
@@ -43,6 +45,6 @@
 	\end{figure}
 
 	\section{Networking} \label{sec:networking}
-	The WDAqua research project as an ITN project aims at outreaching to the scientific community, industry, and society. In the current phase, the first steps in pursuing challenging research questions in this promising research area have been conducted and efforts have been invested in attracting input by the community, by presenting WDAqua at European and international research venues, as well as in transferring expertise to and exchanging experience with the research community by organizing training events (i.e., summer schools, learning weeks) and establishing collaborations with the industry (e.g., through internships of PhD students).
+	The WDAqua research project as an ITN project aims at outreaching to the scientific community, industry, and society. In the current phase, the first steps in pursuing challenging research questions in data-driven QA have been conducted and efforts have been invested in attracting input by the community, by presenting WDAqua at European and international research venues, as well as in transferring expertise to and exchanging experience with the research community by organizing training events (i.e., summer schools, learning weeks) and establishing collaborations with the industry (e.g., through internships of PhD students).
 	
 \end{document}
