--- a/paper.tex
+++ b/paper.tex
@@ -27,8 +27,7 @@
 	\section{WDAqua in a Nutshell} \label{sec:intro}
 	WDAqua, a Marie Sk{\l}odowska Curie Innovative Training Network (ITN) running from January 2015 to December 2018, involves six academic partners\footnote{University of Bonn, Fraunhofer Institute for Intelligent Analysis and Information Systems IAIS, Germany; National and Kapodistrian University of Athens, Greece; Universit{\'e} Jean Monnet Saint-{\'E}tienne, France; University of Southampton, Open Data Institute (ODI), UK.}, and employs 15 PhD students in total.
         The main motivation of this project is that sharing, connecting, analyzing, and understanding data on the Web can provide better services to citizens, communities, and the industry.
-        A vehicle to achieve this is data-driven question answering (QA).
-        In data-driven QA, the key objective is to deliver precise and comprehensive answers to natural language questions primarily by making better use of data.
+        A vehicle to achieve this is data-driven question answering (QA), having the key objective of delivering precise and comprehensive answers to natural language questions primarily by making better use of data.
         Powerful QA tools promise to improve access to the large amount of information available on the Web, or even private data collections and can be immediately useful to a wide audience of end users in their private and professional life.
         Data-driven QA comprises four simplified steps: 1) understanding a human question, and turning it into natural language text, 2) analyzing the question in natural language, 3) finding data to answer the question and to justify the answer, and finally, 4) presenting the answer using, e.g., verbalization, natural language synthesis, or visualization.
 	
