--- a/paper.tex
+++ b/paper.tex
@@ -28,7 +28,7 @@
 	WDAqua, a Marie Sk{\l}odowska Curie Innovative Training Network (ITN) running from January 2015 to December 2018, involves six academic partners\footnote{University of Bonn, Fraunhofer Institute for Intelligent Analysis and Information Systems IAIS, Germany; National and Kapodistrian University of Athens, Greece; Universit{\'e} Jean Monnet Saint-{\'E}tienne, France; University of Southampton, Open Data Institute (ODI), UK.}, and employs 15 PhD students in total.
         The main motivation of this project is that sharing, connecting, analyzing, and understanding data on the Web can provide better services to citizens, communities, and the industry.
         A vehicle to achieve this is data-driven question answering (QA), having the key objective of delivering precise and comprehensive answers to natural language questions primarily by making better use of data.
-        Powerful QA tools promise to improve access to the large amount of information available on the Web, or even private data collections and can be immediately useful to a wide audience of end users in their private and professional life.
+        Powerful QA tools promise to improve access to the large amount of information available on the Web, or even private data collections, and can be immediately useful to a wide audience of end users in their private and professional life.
         Data-driven QA comprises four simplified steps: 1) understanding a human question, and turning it into natural language text, 2) analyzing the question in natural language, 3) finding data to answer the question and to justify the answer, and finally, 4) presenting the answer using, e.g., verbalization, natural language synthesis, or visualization.
 	
 	\section{Project Progress and Dissemination} \label{sec:progress}
@@ -56,3 +56,7 @@
         In the current phase, the first steps in pursuing challenging research questions in this promising research area have been conducted and efforts have been invested in attracting input by the community, by presenting WDAqua at European and international research venues, as well as in transferring expertise to and exchanging experience with the research community by organizing training events (i.e., summer schools, learning weeks) and establishing collaborations with the industry (e.g., through internships of PhD students).
 	
 \end{document}
+%  LocalWords:  WDAqua Ioanna Lytra ren Auer Sk odowska ITN IAIS ODI
+%  LocalWords:  Fraunhofer Kapodistrian Universit Monnet tienne QA
+%  LocalWords:  Meetup PROFiling fEderated ESWC sectoral ICSC NLP
+%  LocalWords:  summarization interlingual
