--- a/paper.tex
+++ b/paper.tex
@@ -32,7 +32,7 @@
         Data-driven QA comprises four simplified steps: 1) understanding a human question, and turning it into natural language text, 2) analyzing the question in natural language, 3) finding data to answer the question and to justify the answer, and finally, 4) presenting the answer using, e.g., verbalization, natural language synthesis, or visualization.
 	
 	\section{Project Progress and Dissemination} \label{sec:progress}
-	The aim of the WDAqua project is to advance the state of the art on the challenging research field of data-driven QA by interleaving the tasks of training, research, and innovation.
+	The aim of the WDAqua project is to advance the state of the art in the challenging research field of data-driven QA by interleaving the tasks of training, research, and innovation.
         The first project year was focused on the first two goals, while innovation is expected to be achieved at the final stage of the project with the combination of the respective research results into an open data-driven QA platform and ecosystem.
 	Until now, the recruitment of the PhD students has been completed and various research and training events have been organized by the WDAqua members.
         In particular, the 1st WDAqua Learning Week in summer 2015 was an opportunity for the participants to gain hands-on experience on different components of QA systems and establish collaboration with fellow WDAqua early stage researchers.
