--- a/paper.tex
+++ b/paper.tex
@@ -3,9 +3,11 @@
 \usepackage{graphicx}
 % \usepackage{hyperref}
 \usepackage{color}
+\usepackage[textsize=tiny]{todonotes}
 
-\newcommand{\ioanna}[1]{\textcolor{red}{Ioanna: #1}}
-\newcommand{\mariaesther}[1]{\textcolor{cyan}{Maria-Esther: #1}}
+\newcommand{\ioanna}[1]{\todo[color=red]{Ioanna: #1}}
+\newcommand{\mariaesther}[1]{\todo[color=cyan]{Maria-Esther: #1}}
+\newcommand{\christoph}[1]{\todo{Christoph: #1}}
        
 \urldef{\mails}\path|{lytra, vidal, langec, auer}@cs.uni-bonn.de|
 
@@ -33,10 +35,10 @@
 	
 	\section{Project Progress and Dissemination} \label{sec:progress}
 	The aim of the WDAqua project is to advance the state of the art in the challenging research field of data-driven QA by interleaving training, research, and innovation.
-        The first project year was focused on the first two goals, while innovation is expected to be achieved at the final stage of the project with the combination of the respective research results into an open data-driven QA platform and ecosystem.
+        The first project year was focused on the first two goals, while \christoph{Please think about this once more.  \emph{Exploitation} will happen in a late phase only, but even from the very start our work should of course be \emph{innovative} already.}innovation is expected to be achieved at the final stage of the project with the combination of the respective research results into an open data-driven QA platform and ecosystem.
 	Until now, the recruitment of the PhD students has been completed and various research and training events have been organized by the WDAqua members.
-        In particular, the 1st WDAqua Learning Week in summer 2015 was an opportunity for the participants to gain hands-on experience on different components of QA systems and establish collaboration with fellow WDAqua early stage researchers.
-        Other research activities include the organization of the Web Intelligence Summer School (2015), the Annual Meetup of the Question Answering Community in Germany and beyond (2015), and the organization of the 3rd International Workshop on Dataset PROFiling and fEderated Search for Linked Data (2016) at the ESWC 2016.
+        In particular, the 1st WDAqua Learning Week in summer 2015 was an opportunity for the participants to gain hands-on experience on different components of QA systems and establish collaborations with fellow WDAqua early stage researchers.
+        Other activities include the organization of the Web Intelligence Summer School (2015), the Annual Meetup of the Question Answering Community in Germany and beyond (2015), and the organization of the 3rd International Workshop on Dataset PROFiling and fEderated Search for Linked Data (2016) at the ESWC 2016.
 	For training purposes, a few short-term inter-sectoral secondments have been completed and more are planned for the upcoming years.
 	
 	At this early stage of the WDAqua research project, the researchers focused, first of all, on identifying and investigating open research questions in the field of data-driven QA, analyzed the state of the art regarding these open challenges, and published or submitted for publication some initial results at high-quality research venues (ICSC 2016, ESWC 2016, etc.).
