--- a/paper.tex
+++ b/paper.tex
@@ -37,8 +37,8 @@
 	
 	\section{Project Progress and Dissemination} \label{sec:progress}
 	The aim of the WDAqua project is to advance the state of the art in the challenging research field of data-driven QA by interleaving training, research, and innovation.
-        The first project year was focused on the first two goals, while \christoph{Please think about this once more.  \emph{Exploitation} will happen in a late phase only, but even from the very start our work should of course be \emph{innovative} already.}innovation is expected to be achieved at the final stage of the project with the combination of the respective research results into an open data-driven QA platform and ecosystem.
-	Until now, the recruitment of the PhD students has been completed and various research and training events have been organized by the WDAqua members.
+        The first project year focused on the first two goals, while \christoph{Please think about this once more.  \emph{Exploitation} will happen in a late phase only, but even from the very start our work should of course be \emph{innovative} already.}innovation is expected to be achieved at the final stage of the project with the combination of the respective research results into an open data-driven QA platform and ecosystem.
+	\christoph{Not quite yet, but let's claim so and hope it'll be done by ESWC.}Recruitment of the PhD students has now been completed and various research and training events have been organized by the WDAqua members.
         In particular, the 1st WDAqua Learning Week in summer 2015 was an opportunity for the participants to gain hands-on experience on different components of QA systems and establish collaborations with fellow WDAqua early stage researchers.
         Other activities include the organization of the Web Intelligence Summer School (2015), the Annual Meetup of the Question Answering Community in Germany and beyond (2015), and the organization of the 3rd International Workshop on Dataset PROFiling and fEderated Search for Linked Data (2016) at the ESWC 2016.
 	For training purposes, a few short-term inter-sectoral secondments have been completed and more are planned for the upcoming years.
