--- a/paper.tex
+++ b/paper.tex
@@ -43,7 +43,7 @@
         Other activities include the organization of the Web Intelligence Summer School (2015), the Annual Meetup of the Question Answering Community in Germany and beyond (2015), and the organization of the 3rd International Workshop on Dataset PROFiling and fEderated Search for Linked Data (2016) at ESWC 2016.
 	For training purposes, a few short-term inter-sectoral secondments among partners have been completed and more are planned for the upcoming years.
 	
-	At this early stage of the WDAqua research project, the researchers focused, first of all, on identifying and investigating open research questions in the field of data-driven QA, analyzed the state of the art regarding these open challenges, and published or submitted for publication some initial results at high-quality research venues (ICSC 2016, ESWC 2016, etc.).
+	At this early stage of the WDAqua research project, the researchers focused, first of all, on identifying and investigating open research questions in data-driven QA, analyzed the state of the art regarding these open challenges, and published or submitted for publication some initial results at high-quality research venues (ICSC 2016, ESWC 2016, etc.).
 	The research questions the PhD students are currently working on can be classified into four key research areas strongly related to data-driven QA: dataset discovery (i.e., quality-driven dataset discovery and retrieval, research on collaborative knowledge bases to support question answering, handling evolution of Web data through extraction of facts in free text, trust and provenance in the Web of data), data management (making datasets fit for QA, dataset profiling, summarization, and ranking), AI and NLP approaches (translating natural language questions in queries, spoken question recognition and interpretation, data-driven text generation), and human-data interaction (interactive interlingual QA systems, challenges connected to data search and use).
         Apart from that, part of the research project is the design of the software architecture of an open QA platform which will enable the integration of the different QA components that will be developed by the partners of WDAqua.
         Fig.~\ref{fig:figure} gives an overview of the aforementioned research challenges and the involved WDAqua partners.
