--- a/paper.tex
+++ b/paper.tex
@@ -1,4 +1,8 @@
 \documentclass[a4paper]{llncs}
+\usepackage[T1]{fontenc}
+\usepackage[utf8]{inputenc}
+\usepackage{lmodern}
+
 \usepackage{url}
 \usepackage{graphicx}
 % \usepackage{hyperref}
@@ -44,7 +48,7 @@
 	For training purposes, a few short-term inter-sectoral secondments among partners have been completed and more are planned for the upcoming years.
 	
 	At this early stage of the WDAqua research project, the researchers focused, first of all, on identifying and investigating open research questions in data-driven QA, analyzed the state of the art regarding these open challenges, and published or submitted for publication some initial results at high-quality research venues (ICSC 2016, ESWC 2016, etc.).
-	The research questions the PhD students are currently working on can be classified into four key research areas strongly related to data-driven QA (cf.\ Fig.~\ref{fig:figure}): dataset discovery (i.e., quality-driven dataset discovery and retrieval, research on collaborative knowledge bases to support question answering, handling evolution of Web data through extraction of facts in free text, trust and provenance in the Web of data), data management (making datasets fit for QA, dataset profiling, summarization, and ranking), AI and NLP approaches (translating natural language questions in queries, spoken question recognition and interpretation, data-driven text generation), and human-data interaction (interactive interlingual QA systems, challenges connected to data search and use).
+	The research questions the PhD students are currently working on can be classified into four key research areas strongly related to data-driven QA (\christoph{To save more space we could even have a figure without a caption and refer to it as ``\emph{the} figure'' – in a 2-page paper that's OK.}cf.\ Fig.~\ref{fig:figure}): dataset discovery (i.e., quality-driven dataset discovery and retrieval, research on collaborative knowledge bases to support question answering, handling evolution of Web data through extraction of facts in free text, trust and provenance in the Web of data), data management (making datasets fit for QA, dataset profiling, summarization, and ranking), AI and NLP approaches (translating natural language questions in queries, spoken question recognition and interpretation, data-driven text generation), and human-data interaction (interactive interlingual QA systems, challenges connected to data search and use).
         Apart from that, the project is concerned with designing the architecture of an open QA platform, to enable the integration of the different QA components that will be developed by the partners of WDAqua and beyond.
 	\begin{figure}[htpb!]
 	    \centering
