--- a/paper.tex
+++ b/paper.tex
@@ -58,7 +58,8 @@
 	\end{figure}
 
 	\section{Networking} \label{sec:networking}
-	The WDAqua research project as an ITN project aims at outreaching to the scientific community, industry, and society. In the current phase, the first steps in pursuing challenging research questions in this promising research area have been conducted and efforts have been invested in attracting input by the community, by presenting WDAqua at European and international research venues, as well as in transferring expertise to and exchanging experience with the research community by organizing training events (i.e., summer schools, learning weeks) and establishing collaborations with the industry (e.g., through internships of PhD students).
+	The WDAqua ITN aims at reaching out to the scientific community, industry, and society.
+        The first steps in pursuing challenging research questions in this promising research area have been conducted and efforts have been invested in attracting input by the community, by presenting WDAqua at European and international research venues, as well as in transferring expertise to and exchanging experience with the research community by organizing training events (i.e., summer schools, learning weeks) and establishing collaborations with the industry (e.g., through internships of PhD students).
 	
 \end{document}
 %  LocalWords:  WDAqua Ioanna Lytra ren Auer Sk odowska ITN IAIS ODI
