clarified role of partner organisations

--- a/paper.tex
+++ b/paper.tex
@@ -45,7 +45,7 @@
 	\christoph{Not quite yet, but let's claim so and hope it'll be done by ESWC.}Recruitment of the PhD students has now been completed and various research and training events have been organized by the WDAqua members.
         In particular, the 1st WDAqua Learning Week in summer 2015 was an opportunity for the participants to gain hands-on experience on different components of QA systems and establish collaborations with fellow WDAqua early stage researchers.
         Other activities include the organization of the Web Intelligence Summer School (2015), the Annual Meetup of the Question Answering Community in Germany and beyond (2015), and the organization of the 3rd International Workshop on Dataset PROFiling and fEderated Search for Linked Data (2016) at ESWC 2016.
-	For training purposes, a few short-term inter-sectoral secondments among partners have been completed and more are planned for the upcoming years.
+	For training purposes, a few short-term inter-sectoral secondments among partners and to industrial partner organizations have been completed and more are planned for the upcoming years.
 	
 	At this early stage of the WDAqua research project, the researchers focused, first of all, on identifying and investigating open research questions in data-driven QA, analyzed the state of the art regarding these open challenges, and published or submitted for publication some initial results at high-quality research venues (ICSC 2016, ESWC 2016, etc.).
 	The research questions the PhD students are currently working on can be classified into four key research areas strongly related to data-driven QA (\christoph{To save more space we could even have a figure without a caption and refer to it as ``\emph{the} figure'' – in a 2-page paper that's OK.}cf.\ Fig.~\ref{fig:figure}): dataset discovery (i.e., quality-driven dataset discovery and retrieval, research on collaborative knowledge bases to support question answering, handling evolution of Web data through extraction of facts in free text, trust and provenance in the Web of data), data management (making datasets fit for QA, dataset profiling, summarization, and ranking), AI and NLP approaches (translating natural language questions in queries, spoken question recognition and interpretation, data-driven text generation), and human-data interaction (interactive interlingual QA systems, challenges connected to data search and use).
