address comments + fix minor issues

--- a/paper.tex
+++ b/paper.tex
@@ -37,18 +37,22 @@
         The main motivation of this project is that sharing, connecting, analyzing, and understanding data on the Web can provide better services to citizens, communities, and the industry.
         A vehicle to achieve this is data-driven question answering (QA), having the key objective of delivering precise and comprehensive answers to natural language questions primarily by making better use of data.
         Powerful QA tools promise to improve access to the large amount of information available on the Web, or even private data collections, and can be immediately useful to a wide audience of end users in their private and professional life.
-        Data-driven QA comprises four simplified steps: 1) understanding a human question, and turning it into natural language text, 2) analyzing the question in natural language, 3) finding data to answer the question and to justify the answer, and finally, 4) presenting the answer using, e.g., verbalization, natural language synthesis, or visualization.
+        Data-driven QA comprises four simplified steps: 1)~understanding a human question, and turning it into natural language text, 2)~analyzing the question in natural language, 3)~finding data to answer the question and to justify the answer, and finally, 4)~presenting the answer using, e.g., verbalization, natural language synthesis, or visualization.
 	
 	\section{Project Progress and Dissemination} \label{sec:progress}
 	The aim of the WDAqua project is to advance the state of the art in the challenging research field of data-driven QA by interleaving training, research, and innovation.
-        The first project year focused on the first two goals, while \christoph{Please think about this once more.  \emph{Exploitation} will happen in a late phase only, but even from the very start our work should of course be \emph{innovative} already.}innovation is expected to be achieved at the final stage of the project with the combination of the respective research results into an open data-driven QA platform and ecosystem.
-	\christoph{Not quite yet, but let's claim so and hope it'll be done by ESWC.}Recruitment of the PhD students has now been completed and various research and training events have been organized by the WDAqua members.
-        In particular, the 1st WDAqua Learning Week in summer 2015 was an opportunity for the participants to gain hands-on experience on different components of QA systems and establish collaborations with fellow WDAqua early stage researchers.
-        Other activities include the organization of the Web Intelligence Summer School (2015), the Annual Meetup of the Question Answering Community in Germany and beyond (2015), and the organization of the 3rd International Workshop on Dataset PROFiling and fEderated Search for Linked Data (2016) at ESWC 2016.
-	For training purposes, a few short-term inter-sectoral secondments among partners and to industrial partner organizations have been completed and more are planned for the upcoming years.
+    % \christoph{\emph{Exploitation} will happen in a late phase only, but even from the very start our work should of course be \emph{innovative} already.}
+    At the final stage of the project, the respective research results will be combined into an open data-driven QA platform and ecosystem, where other QA related components from the research community can be plugged in.
+	%\christoph{Not quite yet, but let's claim so and hope it'll be done by ESWC.}
+	The recruitment of the PhD students has now been completed and various research and training events have been organized by the WDAqua members.
+        In particular, the 1st WDAqua Learning Week in Summer 2015 was an opportunity for the participants to gain hands-on experience on different components of QA systems and establish collaborations with fellow WDAqua early stage researchers.
+        Other activities include the organization of the Web Intelligence Summer School (2015), the Annual Meetup of the Question Answering Community in Germany and beyond (2015), and the organization of the 3rd International Workshop on Dataset PROFIling and fEderated Search for Linked Data (2016) at ESWC 2016.
+	For training purposes, a few short-term inter-sectoral secondments among partners and at industrial partner organizations have been completed and more are planned for the upcoming years.
 	
 	At this early stage of the WDAqua research project, the researchers focused, first of all, on identifying and investigating open research questions in data-driven QA, analyzed the state of the art regarding these open challenges, and published or submitted for publication some initial results at high-quality research venues (ICSC 2016, ESWC 2016, etc.).
-	The research questions the PhD students are currently working on can be classified into four key research areas strongly related to data-driven QA (\christoph{To save more space we could even have a figure without a caption and refer to it as ``\emph{the} figure'' – in a 2-page paper that's OK.}cf.\ Fig.~\ref{fig:figure}): dataset discovery (i.e., quality-driven dataset discovery and retrieval, research on collaborative knowledge bases to support question answering, handling evolution of Web data through extraction of facts in free text, trust and provenance in the Web of data), data management (making datasets fit for QA, dataset profiling, summarization, and ranking), AI and NLP approaches (translating natural language questions in queries, spoken question recognition and interpretation, data-driven text generation), and human-data interaction (interactive interlingual QA systems, challenges connected to data search and use).
+	The research questions the PhD students are currently working on can be classified into four key research areas strongly related to data-driven QA (cf.\ Fig.~\ref{fig:figure}): 
+	%\christoph{To save more space we could even have a figure without a caption and refer to it as ``\emph{the} figure'' – in a 2-page paper that's OK.}
+	dataset discovery (i.e., quality-driven dataset discovery and retrieval, research on collaborative knowledge bases to support question answering, handling evolution of Web data through extraction of facts in free text, trust and provenance in the Web of data), data management (making datasets fit for QA, dataset profiling, summarization, and ranking), AI and NLP approaches (translating natural language questions in queries, spoken question recognition and interpretation, data-driven text generation), and human-data interaction (interactive interlingual QA systems, challenges connected to data search and use).
         Apart from that, the project is concerned with designing the architecture of an open QA platform, to enable the integration of the different QA components that will be developed by the partners of WDAqua and beyond.
 	\begin{figure}[htpb!]
 	    \centering
